--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -1,10 +1,9 @@
-<%- include ('header') %>
-
-<div class="container">
-    <h1><%title %></h1>
-    <a href='/profile'>Profile</a>
-</div>
-
-<br><a href='/transfer'>Transfer</a>
-
-<%- include('footer') %>
+<%- include('header')%>
+<body>
+    <div class="container">
+        <h1><%= title%></h1>
+        <a href='/profile'>Profile</a>
+    </div>
+    <br><a href='/transfer'>Transfer</a>
+</body>
+<%- include('footer')%>
