--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -1,4 +1,7 @@
 <%- include('header')%>
+<%- include('savings')%>
+<%- include('checking')%>
+<%- include('credit')%>
 <body>
     <div class="container">
         <h1><%= title%></h1>
